# LOG-Means

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.ini  configure  eigen3-cheatsheet.md  formula.md  result_Avila.json  result_DSDD.json  result_KDD.json  result_KITSUNE10.json  result_MNIST.json  result_elbow_Avila.json  result_elbow_DSDD.json  result_elbow_KDD.json  result_elbow_KITSUNE10.json  result_elbow_MNIST.json  result_logmeans_Avila.json  result_logmeans_DSDD.json  result_logmeans_KDD.json  result_logmeans_KITSUNE10.json  result_logmeans_MNIST.json
datasets/: readme.txt
include/: cluster_analysis.hpp  data_preprocessing.hpp  elbow.hpp  gain_calculation.hpp  kmeans.hpp  log_means.hpp  random.hpp  utils.hpp
src/: main.cpp
test/: CMakeLists.txt  cluster_analysis_test.cpp  data_preprocessing_test.cpp  gain_calculation_test.cpp  test_input.txt  utils_test.cpp
verification/: README.md  kmeans_clustering.py
